Made optional changes